# numerolog-ai

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: deploy-webapp.yml  deploy.yml
infrastructure/: template.yaml
scripts/: deploy.sh  migrate_reports.py  set_webhook.sh
src/: __init__.py  api_handler.py  config.py  lambda_handler.py  notifications_handler.py
src/handlers/: api.py  bot.py
src/knowledge/: __init__.py  numbers.py
src/models/: user.py
src/services/: ai.py  database.py  numerology.py
webapp/: compatibility.html  index.html  report.html
webapp/css/: compatibility.css  report.css  styles.css
webapp/i18n/: en.json  ru.json
webapp/js/: api.js  app.js  compatibility.js  report.js  telegram.js
